fix: desktop spacing

--- a/sourse/pug/blocks/sCards/_sCards.scss
+++ b/sourse/pug/blocks/sCards/_sCards.scss
@@ -84,6 +84,9 @@
 		aspect-ratio: 400/605;
 
 		max-width: 100%;
+		@include media-breakpoint-up(md) {
+			max-height: calc(min(100vh, 100dvh) - var(--sPT) * 3 - 6rem);
+		}
 		max-height: calc(min(100vh, 100dvh) - var(--sPT) - 6rem);
 		height: 100%;
 	}
